fixed delete btn clipping with last child of container. removed error fadeout

--- a/client/src/Components/profile/Login/Login.module.css
+++ b/client/src/Components/profile/Login/Login.module.css
@@ -32,10 +32,14 @@
 .errorText {
   color: red;
   opacity: 1;
-  animation: fadeOut 2s forwards;
+  animation: fadeOut 2s;
   animation-delay: 3s;
 }
-@keyframes fadeOut {
+/* @keyframes fadeOut {
   from {opacity: 1;}
   to {opacity: 0;}
-}
+} */
+
+ /* removed keyframes ergo error fade 
+TODO: find a way to implement it in way that doesn't cause
+the new error to be at opacity 0 */
