--- a/client/src/Components/profile/Profile.module.css
+++ b/client/src/Components/profile/Profile.module.css
@@ -3,6 +3,9 @@
   flex-direction: column;
   min-height: 100vh;
 }
+.trackedContainer > *:last-child {
+  margin-bottom: 7.5vh;
+}
 
 h2 {
   margin: 10px auto 0px;
